<resources>
    <string name="mes_cat_empty_name">Please, set the category name</string>
    <string name="title_cat_fragment">Category</string>
    <string name="title_cat_activity_add">Create/edit category</string>
    <string name="mes_confirm_delete">Delete "%s" ?</string>
    <string name="mes_confirm_restore">Restore data from %s ?</string>
    <string name="mes_confirm_exit">Really exit?</string>
    <string name="title_pay_faragment">New transaction</string>
    <string name="mes_pay_invalid_account">Account not selected</string>
    <string name="mes_pay_error_save">Error occurred while creating transactions</string>
    <string name="title_acc_fragment">Accounts</string>
    <string name="title_acc_activity_add">Create/edit Account</string>
    <string name="title_template_fragment">Templates</string>
    <string name="title_transfer_fragment">Planned transactions</string>
    <string name="title_paylist_faragment">Transactions</string>
    <string name="title_prefs_fragment">Preferences</string>
    <string name="title_info_fragment">Info</string>
    <string name="title_transacc_fragment">Transfer bw accounts</string>
    <string name="mes_confirm_clear_photo">Clear link to the image?</string>
    <string name="mes_acc_empty_name">Account name cannot be empty</string>
    <string name="mes_trans_not_selected">Please, select a transaction</string>
    <string name="mes_trans_err_camera">Camera error!</string>
    <string name="mes_trans_err_save_photo">Error saving image</string>
    <string name="mes_trans_photo_not_set">Image is not</string>
    <string name="default_account_name">My credit card</string>
    <string name="mes_pay_invalid_repeat_count">Wrong count of repetitions</string>
    <string name="mes_pay_invalid_amount">Invalid amount</string>
    <string name="txt_capt_acc_trans_from">Source account</string>
    <string name="txt_capt_acc_trans_to">Target account</string>
    <string name="mes_illegal_trans_acc">Invalid transfer between accounts with different currencies</string>
    <string name="mes_transacc_invalid_account">Invalid selected accounts</string>
    <string name="txt_transacc_save_ok">Transfer created successfully</string>
    <string name="mes_notify_pay_not_found">Alarm transaction not found (possible it been deleted)</string>
    <string name="mes_backup_create_successfully">Backup created successfully: "%s"</string>
    <string name="mes_backup_create_fail">Fail to create backup!</string>
    <string name="mes_db_restore_successfully">Database restored successfully!</string>
    <string name="mes_db_restore_fail">Fail to restore database:</string>
    <string name="mes_backup_schedule_error">Error during the backup schedule:</string>
    <string name="mes_template_created_successfully">Template created successfully</string>
    <string name="mes_trans_err_view_photo">File "%s" not found! Link will be cleared.</string>
    <string name="mes_wrong_time_format">Wrong time format</string>
    <string name="menu_capt_transfer">Transfer</string>
    <string name="menu_description_transfer">Transfer between accounts</string>
    <string name="menu_capt_pay">New transaction</string>
    <string name="menu_capt_payords">Transactions</string>
    <string name="menu_capt_templates">Templates</string>
    <string name="menu_description_templates">Manage transaction templates</string>
    <string name="menu_capt_charts">Charts</string>
    <string name="menu_capt_category">Categories</string>
    <string name="menu_capt_prefs">Preferences</string>
    <string name="menu_capt_info">Info</string>
    <string name="txt_context_menu_new">\u0020 New</string>
    <string name="txt_context_menu_clone">\u0020 Clone</string>
    <string name="txt_context_menu_select">\u0020 Select</string>
    <string name="txt_context_menu_edit">\u0020 Edit</string>
    <string name="txt_context_menu_acc_new_pay">\u0020 New transaction</string>
    <string name="txt_context_menu_acc_new_transfer">\u0020 New transfer</string>
    <string name="txt_context_menu_del">\u0020 Delete</string>
    <string name="txt_context_menu_create_pay">\u0020 New transaction</string>
    <string name="txt_context_menu_clear_photo">\u0020 Delete image</string>
    <string name="txt_context_menu_view_photo">\u0020 View image</string>
    <string name="txt_context_menu_set_photo">\u0020 Set image</string>
    <string name="txt_context_menu_add_to_templates">\u0020 Add to templates</string>
    <string name="txt_capt_amount">Amount</string>
    <string name="btn_capt_new">New</string>
    <string name="btn_capt_expand">Expand</string>
    <string name="btn_capt_collapse">Collapse</string>
    <string name="btn_capt_save">Save</string>
    <string name="btn_capt_cancel">Cancel</string>
    <string name="txt_capt_cat_name">Category name</string>
    <string name="txt_capt_cat_parent">(parent category, for the group - leave it blank)</string>
    <string name="txt_capt_pay_date">Starting date</string>
    <string name="txt_capt_pay_name">Note</string>
    <string name="txt_capt_pay_type">(transaction type)</string>
    <string name="title_test_activity">Test</string>
    <string name="menu_capt_test">Test</string>
    <string name="txt_capt_pay_cat">Category</string>
    <string name="btn_capt_repeat">Repeat</string>
    <string name="txt_capt_pay_type_period">Repeat every:</string>
    <string name="txt_capt_pay_repeat_count">Number repeat:</string>
    <string name="btn_capt_remind">Remind</string>
    <string name="btn_capt_back">Back</string>
    <string name="mes_pay_invalid_category">Invalid category</string>
    <string name="btn_capt_acc_transfer">Transfer</string>
    <string name="txt_capt_acc_name">Account name</string>
    <string name="txt_capt_acc_start_balance">Starting balance</string>
    <string name="txt_capt_acc_currency">Currency</string>
    <string name="row_acc_descript">Str.bal.:</string>
    <string name="calc_dialog_enter_total_button">Enter Total</string>
    <string name="btn_capt_calculator">Calc</string>
    <string name="btn_capt_pay_template">Get from template</string>
    <string name="bnt_capt_save_as_templdate">Save as template</string>
    <string name="txt_context_menu_cancel">\u0020 Cancel</string>
    <string name="txt_context_menu_view_repeat">\u0020 View planned</string>
    <string name="menu_description_payords">View or edit transactions</string>
    <string name="menu_capt_accounts">Accounts</string>
    <string name="menu_description_accounts">Manage accounts</string>
    <string name="title_dialog_template_period">Select Date Range</string>
    <string name="menu_capt_exit">Exit</string>
    <string name="menu_capt_close">Close</string>
    <string name="title_nav_faragment">Navigate</string>
    <string name="txt_capt_pay_remind_time">On time</string>
    <string name="title_chart_view_fragment">Chart</string>
    <string name="title_chart_balanse">Balance</string>
    <string name="title_chart_balance_desc">Account(s) balance by period</string>
    <string name="title_chart_debit">Expense</string>
    <string name="title_chart_credit">Income</string>
    <string name="txt_capt_acc">(select a concrete account)</string>
    <string name="txt_capt_curr">(or select currency)</string>
    <string name="btn_capt_view">View</string>
    <string name="title_chart_filter_fragment">Chart options</string>
    <string name="txt_capt_interval_period">(interval)</string>
    <string name="title_chart_balance">Balance Chart</string>
    <string name="title_chart_summary">Summary Chart</string>
    <string name="title_chart_summary_desc">Income and expense by period</string>
    <string name="title_chart_x_caption">Time</string>
    <string name="title_chart_y_caption">Money</string>
    <string name="title_chart_category">By categories</string>
    <string name="title_chart_category_desc">Amount of group categories</string>
    <string name="name_pay_type_undefined">Undef</string>
    <string name="name_pay_type_debit">Expense</string>
    <string name="name_pay_type_credit">Income</string>
    <string name="name_period_type_day">Day</string>
    <string name="name_period_type_week">Week</string>
    <string name="name_period_type_month">Month</string>
    <string name="name_period_type_quart">Quart</string>
    <string name="name_period_type_year">Year</string>
    <string name="name_period_report_type_today">Today</string>
    <string name="name_period_report_type_this_week">This Week</string>
    <string name="name_period_report_type_this_month">This Month</string>
    <string name="name_period_report_type_this_year">This Year</string>
    <string name="name_period_report_type_next_week">Next Week</string>
    <string name="name_period_report_type_next_month">Next Month</string>
    <string name="name_period_report_type_next_year">Next Year</string>
    <string name="name_period_report_type_prev_week">Prev Week</string>
    <string name="name_period_report_type_prev_month">Prev Month</string>
    <string name="name_period_report_type_prev_year">Prev Year</string>
    <string name="name_period_report_type_all_time">All Time</string>
    <string name="txt_prefs_time">Reminder time</string>
    <string name="txt_prefs_menu_orientation">Menu orientation (needed restart)</string>
    <string name="txt_prefs_compression">Images compression level</string>
    <string name="name_slide_orient_left">Left</string>
    <string name="name_slide_orient_right">Right</string>
    <string name="name_period_report_type_custom">Custom</string>
    <string name="txt_prefs_defaults">Defaults</string>
    <string name="txt_prefs_interface">Interface</string>
    <string name="txt_prefs_backup">Data Backup</string>
    <string name="txt_prefs_backup_count">Max backup files</string>
    <string name="btn_capt_backup_schedule">Backup scheduler:</string>
    <string name="txt_prefs_backup_time">Start at :</string>
    <string name="txt_prefs_backup_interval">Create backup every :</string>
    <string name="btn_capt_backup_now">Create backup DB</string>
    <string name="btn_capt_restore">Restore DB</string>
    <string name="mes_pay_tray_saving">Saving ...</string>
    <string name="ok">OK</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="row_txt_file_time">Time:</string>
    <string name="row_txt_file_date">Date:</string>
    <string name="btn_capt_backup_clear">Compress DB</string>
    <string name="mes_db_clearing">Clear tables...</string>
    <string name="mes_db_backup">Backup...</string>
    <string name="mes_db_clear_info">It reduces the data file size and optimises the databases structure.</string>
    <string name="mes_db_vacuum">Vacuum ...</string>
    <string name="mes_confirm_clear">Compress the DB?</string>
    <string name="mes_db_clear_successfully">Compress successfully</string>
    <string name="mes_db_clear_fail">Compress failure:</string>
    <string name="mes_deleting">Deleting ...</string>
    <string name="mes_error_occurs">The error has occurred:</string>
    <string name="mes_delete_images">Deleting images ...</string>
    <string name="txt_capt_paylist__bottom_insaldo">opening bal</string>
    <string name="txt_capt_paylist__bottom_outgo">outgo</string>
    <string name="txt_capt_paylist__bottom_income">income</string>
    <string name="txt_capt_paylist__bottom_outsaldo">closing bal</string>
    <string name="mes_acc_acc_transfer_not_edit">Editing transfers not implemented yet.Please delete it and create new.</string>
    <string name="txt_info_app_data">Application data</string>
    <string name="txt_info_db_path">DB:</string>
    <string name="txt_info_images_path">Images:</string>
    <string name="txt_info_backup_path">Backups:</string>
    <string name="txt_info_version_history">Version history</string>
    <string name="contact_us">Contact us</string>
</resources>