<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ctxNew"
        android:icon="@drawable/transact"
        android:title="@string/txt_context_menu_new"/>
    <item
        android:id="@+id/ctxClone"
        android:icon="@drawable/transact_clone"
        android:title="@string/txt_context_menu_clone"/>

    <item
        android:id="@+id/ctxViewRepeat"
        android:icon="@drawable/calendar"
        android:title="@string/txt_context_menu_view_repeat"/>
    <item
        android:id="@+id/ctxAddTemplate"
        android:icon="@drawable/puzzle"
        android:title="@string/txt_context_menu_add_to_templates"/>

    <item
            android:id="@+id/ctxEdit"
            android:icon="@drawable/transact_edit"
            android:title="@string/txt_context_menu_edit"/>
    <item
            android:id="@+id/ctxDelete"
            android:icon="@drawable/exit_red"
            android:title="@string/txt_context_menu_del"/>
    <item
            android:id="@+id/ctxCancel"
            android:icon="@drawable/undo"
            android:title="@string/txt_context_menu_cancel"/>
</menu>